fixed hamburger not showing

--- a/src/static/css/styles.scss
+++ b/src/static/css/styles.scss
@@ -338,6 +338,7 @@ h2, h1, h5 {
       display: none;
     }
     .dropDownIcon {
+      display: block;
       position: absolute;
       top: 0;
       padding-right: 10px;
